<resources>
    <string name="app_name">Calculator</string>
    <string name="edit_text">Enter Number</string>
    <string name="one_number">1</string>
    <string name="two_number">2</string>
    <string name="three_number">3</string>
    <string name="four_number">4</string>
    <string name="five_number">5</string>
    <string name="six_number">6</string>
    <string name="seven_number">7</string>
    <string name="eight_number">8</string>
    <string name="nine_number">9</string>
    <string name="divideOperator">/</string>
    <string name="subtractOperator">-</string>
    <string name="additionOperator">+</string>
    <string name="assignmentOperator">=</string>
    <string name="dotOperator">.</string>
    <string name="zero_number">0</string>
    <string name="deleteOperator">C</string>
</resources>