<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:background="@drawable/rectangle_border"
        android:hint="@string/edit_text"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="@dimen/sixteen_dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_one"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/one_number" />

            <Button
                android:id="@+id/button_two"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/two_number" />

            <Button
                android:id="@+id/button_three"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/three_number" />

            <Button
                android:id="@+id/button_divide"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginRight="@dimen/eight_dp"
                android:text="@string/divideOperator" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_four"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/four_number" />

            <Button
                android:id="@+id/button_five"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/five_number" />

            <Button
                android:id="@+id/button_six"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/six_number" />

            <Button
                android:id="@+id/button_subtract"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginRight="@dimen/eight_dp"
                android:text="@string/subtractOperator" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_seven"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/seven_number" />

            <Button
                android:id="@+id/button_eight"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/eight_number" />

            <Button
                android:id="@+id/button_nine"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/nine_number" />

            <Button
                android:id="@+id/button_addition"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginRight="@dimen/eight_dp"
                android:text="@string/additionOperator" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/deleteOperator" />

            <Button
                android:id="@+id/button_zero"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/zero_number" />

            <Button
                android:id="@+id/button_dot"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/dotOperator" />

            <Button
                android:id="@+id/button_assignment"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginRight="@dimen/eight_dp"
                android:text="@string/assignmentOperator" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>